--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
+    "firebase": "^10.5.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
